--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
   <title></title>
-  
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=API_KEY">
 </head>
 <body>
-
+  <div id="map-canvas" style="width: 100%; height: 100%"></div>
 </body>
 </html>
